fix help dialog on firefox

--- a/share/static/alice-default.css
+++ b/share/static/alice-default.css
@@ -693,7 +693,8 @@ div#help div#topics {
   bottom: 15px;
   left: 20px;
   right: 20px;
-  overflow-y: auto; }
+  overflow-y: auto;
+  overflow-x: hidden; }
 
 div#help h1 {
   margin: 0;
@@ -702,7 +703,7 @@ div#help h1 {
   font-weight: normal; }
 
 div#help dl {
-  width: 48%;
+  width: 47%;
   font-size: 12px;
   margin-top: 0;
   padding-top: 10px;
